@@ -19,6 +19,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 
@@ -51,7 +52,7 @@ public class TestClient {
 
     private int invokeServlet(String url) throws Exception {
         log("Invoking url = " + url);
-        URL u = new URL(url);
+        URL u = URI.create(url).toURL();
         HttpURLConnection c1 = (HttpURLConnection)u.openConnection();
         int code = c1.getResponseCode();
         InputStream is = c1.getInputStream();
