@@ -55,7 +55,7 @@ public class IntegrationBVServletTestNG {
 
             String testurl = "http://" + host + ":" + port + "/" + strContextRoot + "/test";
             //System.out.println("URL is: "+testurl);
-            URL url = new URL(testurl);
+            URL url = URI.create(testurl).toURL();
             //echo("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
