@@ -52,7 +52,7 @@ public class CmpRosterTestNG {
           String testurl = "http://" + host  + ":" + port + "/"+
         strContextRoot + "/" + TEST_NAME;
 
-      URL url = new URL(testurl);
+      URL url = URI.create(testurl).toURL();
       //echo("Connecting to: " + url.toString());
       HttpURLConnection conn = (HttpURLConnection) url.openConnection();
       conn.connect();
