@@ -68,7 +68,7 @@ public class HelloOSGITestNG extends AdminBaseDevTest{
          Thread.currentThread().sleep(5000);
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/hello.jsp";
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
@@ -97,7 +97,7 @@ public class HelloOSGITestNG extends AdminBaseDevTest{
     public void simpleServletTest() throws Exception{
          try{
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/simpleservlet";
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
