@@ -76,7 +76,7 @@ public class JpaInjectEMFTestNG {
         //System.out.println("url="+url);
 
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             System.err.println("Unexpected return code: " + code);
