@@ -58,7 +58,7 @@ public class HelloSecurityTestNG {
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/hello.jsp";
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -105,7 +105,7 @@ public class HelloSecurityTestNG {
         //
     String testurl = "http://" + host  + ":" + port;
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -138,7 +138,7 @@ public class HelloSecurityTestNG {
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/first.html";
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -186,7 +186,7 @@ public class HelloSecurityTestNG {
 
         String testurl = "http://" + host  + ":" + port + "/"+ strContextRoot + "/simpleservlet";
         //System.out.println("URL is: "+testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         //echo("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
