@@ -57,8 +57,8 @@ public class JSFWebTestNG {
     public void jsfAppDeployedFirstPagetest() throws Exception {
         try {
 
-            HttpURLConnection connection = (HttpURLConnection) 
-                new URL("http://" + m_host + ":" + m_port + "/" + strContextRoot + "/greetings.xhtml").openConnection();
+            HttpURLConnection connection = (HttpURLConnection)
+                URI.create("http://" + m_host + ":" + m_port + "/" + strContextRoot + "/greetings.xhtml").toURL().openConnection();
             connection.connect();
             int responseCode = connection.getResponseCode();
 
@@ -89,8 +89,8 @@ public class JSFWebTestNG {
     public void jsfIndexPageBasicTest() throws Exception {
         try {
 
-            HttpURLConnection conn = (HttpURLConnection) 
-                new URL("http://" + m_host + ":" + m_port + "/" + strContextRoot + "/index.xhtml").openConnection();
+            HttpURLConnection conn = (HttpURLConnection)
+                URI.create("http://" + m_host + ":" + m_port + "/" + strContextRoot + "/index.xhtml").toURL().openConnection();
             conn.connect();
             int responseCode = conn.getResponseCode();
             BufferedReader input = new BufferedReader(new InputStreamReader(conn.getInputStream()));
