@@ -124,7 +124,7 @@ public class ExtensionsTestNG {
     }
 
     private boolean checkForString(String testurl, String str) throws Exception {
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
